# MonitorControllerMax

./: .gitattributes  .gitignore  Button Test  CLAUDE.md  Cargo.toml  Masking Effects.code-workspace  Monitor Controllor 7.1.4 AiYue_V1.jsfx  Monitor Controllor 7.1.4.jsfx  Monitor Controllor 7.1.4.lua  Monitor Controllor SUB.jsfx  Monitor Controllor SUB.lua  Monitor Controllor.lua  check_encoding_status.ps1  convert_to_utf8_bom.ps1
.cargo/: config.toml
.claude/: settings.local.json
Debug/: README.md  claude_auto_build.sh
Doc/: Dev Step.md  Dev.md  Juce插件开发详细指南_.md  Memory Slider FFT MDCT Functions.txt  User Functions and Namespace Pseudo-Objects & EEL2 Preprocessor.txt  架构.md  硬件控制器.md  稳定性.md  设计参考.html
Doc/Experience/: Slint布局等宽陷阱.md  原型代码.jsx  第一阶段开发经验总结.md
Doc/JUCE/: classADSR-members.html  classADSR.html  classARAAudioModification-members.html  classARAAudioModification.html  classARAAudioModificationListener-members.html  classARAAudioModificationListener.html  classARAAudioModificationListener__inherit__graph.map  classARAAudioModification__inherit__graph.map  classARAAudioModification__inherit__graph.md5  classARAAudioSource-members.html  classARAAudioSourceListener.html  classARAAudioSourceListener__inherit__graph.map  classARAAudioSourceReader.html  classARAAudioSourceReader__inherit__graph.map  classARAAudioSource__inherit__graph.map  classARADocument-members.html  classARADocument.html  classARADocumentControllerSpecialisation__inherit__graph.map  classARADocumentControllerSpecialisation__inherit__graph.md5  classARADocumentListener-members.html  classARADocumentListener__inherit__graph.map  classARADocument__inherit__graph.map  classARADocument__inherit__graph.md5  classARAEditorRenderer__inherit__graph.map  classARAEditorRenderer__inherit__graph.md5  classARAEditorView-members.html  classARAEditorView_1_1Listener-members.html  classARAEditorView_1_1Listener.html  classARAFactoryWrapper-members.html  classARAFactoryWrapper.html  classARAHostModel_1_1AudioModification__inherit__graph.map  classARAHostModel_1_1AudioSource-members.html  classARAHostModel_1_1AudioSource.html  classARAHostModel_1_1AudioSource__inherit__graph.map  classARAHostModel_1_1ManagedARAHandle-members.html  classARAHostModel_1_1MusicalContext-members.html  classARAHostModel_1_1MusicalContext__inherit__graph.map  classARAHostModel_1_1PlaybackRegionRegistry.html  classARAHostModel_1_1PlugInExtensionInstance.html  classARAHostModel_1_1RegionSequence__inherit__graph.map  (+1842 more)
Doc/JUCE Wiki/: Audio-Device-Management.md  Audio-Framework.md  Audio-Plugin-System.md  CMake-Build-System.md  Component-System.md  Development-Tools.md  Mathematics-and-Geometry.md  OpenGL-Integration.md  Standalone-Plugin-Applications.md  String,-ValueTree,-and-File.md  Widgets-and-Controls.md
Doc/Log/: claude-conversation-2025-12-01-agent-8b.md  cursor_1.md  cursor_2.md
Doc/Main/: 1.项目概述.md  10.Fretcat库深度分析报告.md  11.重构差距分析报告.md  2.技术架构总览.md  3.项目规范与约定.md  4.统一开发流程.md  5.功能模块设计.md  6.开发时间线.md  7.技术风险与解决方案.md  8.未来架构演进路线.md  9.缩放机制对比分析报告.md
Doc/Note/: MonitorControllerMax 分布式通信协议 (v1.0 Draft).md  MonitorControllerMax 核心逻辑与交互设计规范 (v4.0 Final Gold).md  OSC 双向通信架构方案 v6 - 逻辑统一.md  UI 重构计划：面板系统与布局优化.md  代码分析完成 - 发现关键问题.md  完全基于通道名称的架构重构计划.md  总结.md  方案探讨.md  深度分析完成 - 需要你的决策.md  深度审计报告：依赖库分析.md  问题分析总结.md
Doc/Old/: Dev Step.md
Doc/ReaScript/: Basic code reference.txt  File IO and Serialization.txt  Graphics.txt  Introduction.txt  MIDI.txt  Memory Slider FFT MDCT Functions.txt  ReaScript API.txt  Rules  Special Variables.txt  Strings.txt  User Functions and Namespace Pseudo-Objects & EEL2 Preprocessor.txt
Doc/Report/: 2026-02-25_16-42-14_+08-00.md  2026-02-25_17-44-31_+08-00.md  2026-02-26_03-08-17_+08-00.md  2026-02-26_03-29-32_+08-00.md  2026-02-26_06-07-04_+08-00.md  2026-02-26_19-37-44_+08-00.md  2026-02-26_20-16-59_+08-00.md  2026-02-26_20-42-21_+08-00.md  2026-02-27_05-44-10_+08-00.md  2026-02-27_06-05-16_+08-00.md  2026-02-27_09-56-46_+08-00.md  2026-02-27_10-07-31_+08-00.md
Doc/nih-plug/: Advanced-Topics-robbert-vdh-nih-plug---DeepWiki-Advanced-Topics.md  Audio-Buffer-System-robbert-vdh-nih-plug---DeepWiki-Audio-Buffer-System.md  CLAP-Extensions-robbert-vdh-nih-plug---DeepWiki-CLAP-Extensions.md  Crisp-Plugin-robbert-vdh-nih-plug---DeepWiki-Crisp-Plugin.md  Diopser-Plugin-robbert-vdh-nih-plug---DeepWiki-Diopser-Plugin.md  Editor-System-Overview-robbert-vdh-nih-plug---DeepWiki-Editor-System-Overview.md  Example-Plugins-robbert-vdh-nih-plug---DeepWiki-Example-Plugins.md  Installation-and-Setup-robbert-vdh-nih-plug---DeepWiki-Installation-and-Setup.md  Parameter-Smoothing-and-Automation-robbert-vdh-nih-plug---DeepWiki-Parameter-Smoothing-and-Automation.md  Plugin-Trait-robbert-vdh-nih-plug---DeepWiki-Plugin-Trait.md  Project-Structure-robbert-vdh-nih-plug---DeepWiki-Project-Structure.md  (+5 more)
MonitorControllerMax/: MonitorControllerMax.jucer  build_debug.bat  build_log.txt  build_release.bat  claude_dev_assistant.bat
Source/: MonitorControllerMax_CodeContext.txt
Source/Core/: Cargo.toml
Source/Core/src/: audio.rs  channel_logic.rs  config_manager.rs  interaction.rs  lib.rs  osc_state.rs  params.rs
Source/Infra/: Cargo.toml
Source/Infra/src/: config_loader.rs  lib.rs  logger.rs
Source/Plugin/: Cargo.toml  build.rs
Source/Plugin/Src/: Audio.rs  Channel_Logic.rs  Components.rs  Config_Manager.rs  Editor.rs  Interaction.rs  Keyboard_Polling.rs  Lib.rs  Network.rs  Network_Protocol.rs  Osc.rs  Params.rs  Registry.rs  Web.rs  Web_Assets.rs  Web_Protocol.rs  config_file.rs  logger.rs  scale.rs
Source/Plugin/Src/Web/: app.js  index.html
Source/Plugin/Src/editor/: slint_host.rs
Source/Plugin/ui/: main.slint
Source/Plugin/ui/globals/: theme.slint
Source/Plugin/ui/pages/: home_page.slint
Source/Plugin/ui/widgets/: dropdown_button.slint  dropdown_list_item.slint  outlined_button.slint  speaker_box.slint  volume_knob.slint
Source/Reactor/: Cargo.toml
Source/Reactor/src/: lib.rs  web_assets.rs
Source/Reactor/src/actors/: mod.rs  network.rs  osc.rs  web.rs
Source/Xtask/: Cargo.toml
assets/: style.css
(+2146 files in other folders)
