[workspace]
members = [
    "Source/Core",
    "Source/Reactor",
    "Source/Protocol",
    "Source/Infra",
    "Source/Plugin",
    "Source/xtask",
]
exclude = [
    "Library"
]
resolver = "2"

[workspace.dependencies]
# 内部依赖
mcm_core = { path = "./Source/Core" }
mcm_reactor = { path = "./Source/Reactor" }
mcm_protocol = { path = "./Source/Protocol" }
mcm_infra = { path = "./Source/Infra" }

# NIH-Plug 生态 (Usage of local modified library)
nih_plug = { path = "./Library/nih-plug" }
nih_plug_egui = { path = "./Library/nih-plug/nih_plug_egui" }

# 常用工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
crossbeam = "0.8"
parking_lot = "0.12"
atomic_float = "0.1"
lazy_static = "1.4"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# 异步运行环境 (Reactor)
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rosc = "0.10"
local-ip-address = "0.5"

# 优化
wide = "0.7" # SIMD
