[package]
name = "monitor_controller_max"
version = "2.4.0"
edition = "2021"
authors = ["GohardSGG"]
description = "MonitorControllerMax Rust Edition"

[lib]
path = "Src/Lib.rs"
crate-type = ["cdylib"]

[features]
default = []
production = []  # 生产模式：禁用文件日志

[dependencies]
nih_plug = { workspace = true, features = ["assert_process_allocs"] }
nih_plug_egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
atomic_float = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
chrono = "0.4"
zeromq = "0.4.0"
bincode = { workspace = true }
rust-embed = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rosc = "0.10"
dirs = "5.0"
open = "5.0"
wide = { workspace = true }  # P6: SIMD 优化

[build-dependencies]
serde_json = "1.0"
chrono = "0.4"
