[package]
name = "monitor_controller_max"
version = "2.4.2"
edition = "2021"
authors = ["GohardSGG"]
description = "MonitorControllerMax Rust Edition"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["gui-slint"]
gui-slint = ["dep:nih_plug_slint", "dep:slint", "dep:slint-build"]
production = []  # 生产模式：禁用文件日志

[dependencies]
nih_plug = { workspace = true, features = ["assert_process_allocs"] }
nih_plug_slint = { path = "../../Library/nih-plug-slint", optional = true }
slint = { version = "=1.14.1", default-features = false, features = ["std", "compat-1-2"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
atomic_float = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }

# Workspace Modules
mcm_core = { workspace = true }
mcm_reactor = { workspace = true }
mcm_protocol = { workspace = true }
mcm_infra = { workspace = true }
open = "5.3.3"

# For build.rs or specific needs?
# rust-embed is likely used in Reactor now, but if Plugin uses it for something else?
# Plugin/components.rs doesn't use it.
# Leave it out unless compilation fails.

[build-dependencies]
serde_json = "1.0"
chrono = "0.4"
slint-build = { version = "=1.14.1", optional = true }
