[package]
name = "mcm_reactor"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { workspace = true }
rosc = { workspace = true }
local-ip-address = { workspace = true }
futures = "0.3"

# 内部依赖
mcm_core = { workspace = true }
mcm_protocol = { workspace = true }
mcm_infra = { workspace = true }

# 工具
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
rust-embed = "8.0"
nih_plug = { workspace = true }
